@@ -20,8 +20,8 @@ class sub_periscope_display : public freeview_display
 	vector<class texture*> compassbar_tex;
 	vector<unsigned> compassbar_width;
 
-	//texture* clock_hourpointer;
-	//texture* clock_minutepointer;
+	texture* clock_hours_pointer;
+	texture* clock_minutes_pointer;
 	
 	bool zoomed;	// use 1,5x (false) or 6x zoom (true)
 
